# lighting

./: Cargo.toml  readme.md
lib/domain/: Cargo.toml
lib/domain/src/: brightness.rs  capabilities.rs  color.rs  lib.rs  light.rs
lib/domain/src/mode/: parameter.rs
lib/dump/: Cargo.toml
lib/dump/src/: lib.rs
lib/dump/src/dumpers/: json.rs
lib/local_registry/: Cargo.toml
lib/local_registry/registries/json_provider/: Cargo.toml
lib/local_registry/registries/json_provider/src/: lib.rs
lib/local_registry/registries/json_registry/: Cargo.toml
lib/local_registry/registries/json_registry/src/: lib.rs
lib/local_registry/src/: dump.rs  json_dump.rs  lib.rs
lib/logic/: Cargo.toml
lib/logic/src/: color.rs  context.rs  facade.rs  lib.rs  light.rs  managers.rs  misc.rs  mode.rs  strategies.rs
lib/logic/src/color/: hsv.rs  rgb.rs  temperature.rs
lib/logic/src/facade/: default.rs
lib/logic/src/managers/: default.rs
lib/logic/src/mode/: parameter.rs
lib/logic/src/strategies/: list.rs  save.rs  sync.rs
lib/logic/src/strategies/save/: dump.rs  load_and_save.rs  manage.rs
lib/provider/: Cargo.toml
lib/provider/src/: lib.rs
shared/: Diagram.drawio
src/: main.rs
