[package]
name = "lighting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lib/local_registry",
    "lib/domain",
    "lib/provider",
    "lib/local_registry/registries/json_registry/"
]


[dependencies]
domain = { path = "lib/domain" }
local_registry = { path = "lib/local_registry" }
serde_json = "1.0.117"

