[package]
name = "lighting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "lib/local_registry",
    "lib/domain",
    "lib/provider",
    "lib/local_registry/registries/json_registry/"
, "lib/logic"]


[dependencies]
domain = { path = "lib/domain" }
local_registry = { path = "lib/local_registry" }
logic = { version = "0.1.0", path = "lib/logic" }
serde_json = "1.0.117"

